--- a/index.html
+++ b/index.html
@@ -1,127 +1,97 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NCHMCT Student Help</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-    html { scroll-behavior: smooth; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>NCHMCT Student Help</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+<meta name="description" content="NCHMCT Student Help – Explore Hotel Management syllabus, courses, institutes, global internships, and career opportunities abroad.">
+<meta name="keywords" content="Hotel Management, NCHMCT, Student Help, Internship Abroad, Career in Hospitality">
+<meta name="robots" content="index, follow">
+<style>html { scroll-behavior: smooth; }</style>
 </head>
 <body class="bg-white text-gray-800">
 
-  <!-- Navbar -->
-  <nav class="fixed w-full bg-white shadow-md z-50">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-red-600">NCHMCT Help</h1>
-      <ul class="flex space-x-6">
-        <li><a href="#syllabus" class="hover:text-red-600">Syllabus</a></li>
-        <li><a href="#courses" class="hover:text-red-600">Courses</a></li>
-        <li><a href="#institutes" class="hover:text-red-600">Institutes</a></li>
-        <li><a href="#gallery" class="hover:text-red-600">Gallery</a></li>
-        <li><a href="#internships" class="hover:text-red-600">Internships</a></li>
-        <li><a href="#careers" class="hover:text-red-600">Careers Abroad</a></li>
-      </ul>
-    </div>
-  </nav>
+<!-- Navbar -->
+<nav class="fixed w-full bg-white shadow-md z-50">
+  <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+    <h1 class="text-2xl font-bold text-red-600">NCHMCT Help</h1>
+    <ul class="flex space-x-4 items-center">
+      <li><a href="#colleges" class="hover:text-red-600">Colleges</a></li>
+      <li><a href="#courses" class="hover:text-red-600">Courses</a></li>
+      <li><a href="#syllabus" class="hover:text-red-600">Syllabus</a></li>
+      <li><a href="#internships" class="hover:text-red-600">Internships</a></li>
+      <li><a href="#careers" class="hover:text-red-600">Careers Abroad</a></li>
+      <li>
+        <a href="https://t.me/+JPFyEztvXDE5OGVl" target="_blank" class="flex items-center bg-blue-500 text-white px-3 py-2 rounded-full hover:bg-blue-600">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 mr-2">
+          Join Telegram
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-  <!-- Hero Section -->
-  <section class="h-screen flex flex-col justify-center items-center bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5');">
-    <div class="bg-black bg-opacity-50 p-8 rounded-xl text-center text-white">
-      <h2 class="text-4xl font-bold mb-4">Hospitality Career Starts Here</h2>
-      <p class="mb-6">Explore syllabus, courses, institutes, global internships and career opportunities abroad.</p>
-      <a href="#courses" class="bg-red-600 px-6 py-3 rounded-xl shadow-lg hover:bg-red-700">Explore Courses</a>
-    </div>
-  </section>
+<!-- Hero Section -->
+<section class="h-screen flex flex-col justify-center items-center bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5');">
+  <div class="bg-black bg-opacity-50 p-8 rounded-xl text-center text-white">
+    <h2 class="text-4xl font-bold mb-4">Hospitality Career Starts Here</h2>
+    <p class="mb-6">Explore syllabus, courses, institutes, global internships and career opportunities abroad.</p>
+    <a href="#courses" class="bg-red-600 px-6 py-3 rounded-xl shadow-lg hover:bg-red-700">Explore Courses</a>
+  </div>
+</section>
 
-  <!-- Gallery Section -->
-  <section id="gallery" class="py-16 bg-gray-100">
-    <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-10">Student & Food Gallery</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" class="rounded-2xl shadow-md" alt="Food">
-        <img src="https://images.unsplash.com/photo-1529692236671-f1dc28b1a5d1" class="rounded-2xl shadow-md" alt="Students">
-        <img src="https://images.unsplash.com/photo-1533777419517-3e4017e2e15c" class="rounded-2xl shadow-md" alt="Cooking">
-        <img src="https://images.unsplash.com/photo-1529694157871-4e0c90b29fbd" class="rounded-2xl shadow-md" alt="Practical Class">
-        <img src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9" class="rounded-2xl shadow-md" alt="Buffet">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" class="rounded-2xl shadow-md" alt="Chef Work">
+<!-- Colleges Section -->
+<section id="colleges" class="py-16 bg-gray-100">
+  <div class="max-w-7xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center mb-10">Top Hotel Management Colleges in India</h2>
+    <div class="grid md:grid-cols-2 gap-6">
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold mb-2">Institute of Hotel Management, Bengaluru</h3>
+        <p>B.Sc. in Hospitality & Hotel Administration</p>
+        <a href="https://www.ihmbangalore.kar.nic.in/" target="_blank" class="text-blue-600 hover:underline">Official Website</a>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h3 class="text-xl font-bold mb-2">Institute of Hotel Management, Mumbai</h3>
+        <p>B.Sc. in Hospitality & Hotel Administration</p>
+        <a href="https://www.ihmmumbai.net/" target="_blank" class="text-blue-600 hover:underline">Official Website</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Internship Roadmap -->
-  <section id="internships" class="py-16">
-    <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-10">Global Internship Roadmap</h2>
-      <div class="relative">
-        <div class="border-l-4 border-red-600 ml-6">
-          <!-- Step 1 -->
-          <div class="mb-10 ml-6 relative">
-            <div class="absolute w-10 h-10 bg-red-600 rounded-full -left-5 flex items-center justify-center text-white text-xl">🎓</div>
-            <p class="bg-white p-4 rounded-lg shadow-md"><strong>Year 1:</strong> Learn basics of Food Production, Front Office, F&B Service, Housekeeping.</p>
-          </div>
-          <!-- Step 2 -->
-          <div class="mb-10 ml-6 relative">
-            <div class="absolute w-10 h-10 bg-red-600 rounded-full -left-5 flex items-center justify-center text-white text-xl">🏨</div>
-            <p class="bg-white p-4 rounded-lg shadow-md"><strong>Year 2:</strong> Industrial Training in India (Taj, Oberoi, ITC, Marriott, etc.).</p>
-          </div>
-          <!-- Step 3 -->
-          <div class="mb-10 ml-6 relative">
-            <div class="absolute w-10 h-10 bg-red-600 rounded-full -left-5 flex items-center justify-center text-white text-xl">✈️</div>
-            <p class="bg-white p-4 rounded-lg shadow-md"><strong>Year 3:</strong> Apply for International Internship in <strong>Australia, Dubai, Switzerland, USA</strong>.</p>
-          </div>
-          <!-- Step 4 -->
-          <div class="ml-6 relative">
-            <div class="absolute w-10 h-10 bg-red-600 rounded-full -left-5 flex items-center justify-center text-white text-xl">💼</div>
-            <p class="bg-white p-4 rounded-lg shadow-md"><strong>Year 4:</strong> Final Placement – Many students get absorbed abroad after internship.</p>
-          </div>
-        </div>
+<!-- Courses Section -->
+<section id="courses" class="py-16">
+  <div class="max-w-7xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center mb-10">Courses Offered</h2>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <h4 class="text-xl font-bold mb-2">B.Sc. Hospitality & Hotel Administration</h4>
+        <p>Duration: 3 years</p>
+        <p>Eligibility: 12th pass, 50% marks</p>
+        <p>Fees: ₹50,000–2,00,000/yr</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Careers Abroad Section -->
-  <section id="careers" class="py-16 bg-gray-100">
-    <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-10">Career Path After Hotel Management Abroad</h2>
-      <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
-        <!-- Australia -->
-        <div class="bg-white p-6 rounded-2xl shadow-md">
-          <h3 class="text-xl font-bold mb-2">Australia 🇦🇺</h3>
-          <p><strong>Jobs:</strong> Chef, Barista, Front Office Manager</p>
-          <p><strong>Salary:</strong> AUD $45k – $60k/year</p>
-          <p><strong>Extra:</strong> Pathway to PR after 2–3 years</p>
-        </div>
-        <!-- Dubai -->
-        <div class="bg-white p-6 rounded-2xl shadow-md">
-          <h3 class="text-xl font-bold mb-2">Dubai 🇦🇪</h3>
-          <p><strong>Jobs:</strong> Hotel Ops, Guest Relations</p>
-          <p><strong>Salary:</strong> AED 3,000 – 7,000/month</p>
-          <p><strong>Extra:</strong> Accommodation & food perks</p>
-        </div>
-        <!-- Switzerland -->
-        <div class="bg-white p-6 rounded-2xl shadow-md">
-          <h3 class="text-xl font-bold mb-2">Switzerland 🇨🇭</h3>
-          <p><strong>Jobs:</strong> Fine Dining Chef, Resort Manager</p>
-          <p><strong>Salary:</strong> CHF 3,500 – 6,000/month</p>
-          <p><strong>Extra:</strong> Global career growth</p>
-        </div>
-        <!-- USA -->
-        <div class="bg-white p-6 rounded-2xl shadow-md">
-          <h3 class="text-xl font-bold mb-2">USA 🇺🇸</h3>
-          <p><strong>Jobs:</strong> Restaurant Manager, Cruise Jobs</p>
-          <p><strong>Salary:</strong> USD $30k – $50k/year</p>
-          <p><strong>Extra:</strong> J1 Visa cultural exchange</p>
-        </div>
-      </div>
-    </div>
-  </section>
+<!-- Syllabus Section -->
+<section id="syllabus" class="py-16 bg-gray-100">
+  <div class="max-w-7xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center mb-10">Syllabus</h2>
+    <iframe src="https://www.gnihm.ac.in/pdf/SYLLABUS%20-%20NCHMCT%20-%20B.Sc.H%26HA%20-%20SEM%20ALL.pdf" width="100%" height="500px"></iframe>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white py-6 text-center">
-    <p>© 2025 NCHMCT Student Help | Designed for students</p>
-  </footer>
+<!-- Footer -->
+<footer class="bg-gray-900 text-white py-6 text-center">
+  <p>© 2025 NCHMCT Student Help | Designed for students</p>
+  <a href="https://t.me/+JPFyEztvXDE5OGVl" target="_blank" class="inline-flex items-center mt-2 bg-blue-500 px-4 py-2 rounded-full hover:bg-blue-600">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-5 h-5 mr-2">
+    Join our Telegram Group
+  </a>
+</footer>
 
 </body>
 </html>
