--- a/index.html
+++ b/index.html
@@ -1,97 +1,46 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NCHMCT Student Help</title>
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-<meta name="description" content="NCHMCT Student Help – Explore Hotel Management syllabus, courses, institutes, global internships, and career opportunities abroad.">
-<meta name="keywords" content="Hotel Management, NCHMCT, Student Help, Internship Abroad, Career in Hospitality">
-<meta name="robots" content="index, follow">
-<style>html { scroll-behavior: smooth; }</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NCHMCT Student Help</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-white text-gray-800">
+<body>
+  <header>
+    <h1>Welcome to NCHMCT Student Help</h1>
+  </header>
 
-<!-- Navbar -->
-<nav class="fixed w-full bg-white shadow-md z-50">
-  <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-red-600">NCHMCT Help</h1>
-    <ul class="flex space-x-4 items-center">
-      <li><a href="#colleges" class="hover:text-red-600">Colleges</a></li>
-      <li><a href="#courses" class="hover:text-red-600">Courses</a></li>
-      <li><a href="#syllabus" class="hover:text-red-600">Syllabus</a></li>
-      <li><a href="#internships" class="hover:text-red-600">Internships</a></li>
-      <li><a href="#careers" class="hover:text-red-600">Careers Abroad</a></li>
-      <li>
-        <a href="https://t.me/+JPFyEztvXDE5OGVl" target="_blank" class="flex items-center bg-blue-500 text-white px-3 py-2 rounded-full hover:bg-blue-600">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 mr-2">
-          Join Telegram
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <section id="hero">
+    <img src="images/hero_bg.jpg" alt="Hero Image" style="width:100%;height:auto;" />
+  </section>
 
-<!-- Hero Section -->
-<section class="h-screen flex flex-col justify-center items-center bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5');">
-  <div class="bg-black bg-opacity-50 p-8 rounded-xl text-center text-white">
-    <h2 class="text-4xl font-bold mb-4">Hospitality Career Starts Here</h2>
-    <p class="mb-6">Explore syllabus, courses, institutes, global internships and career opportunities abroad.</p>
-    <a href="#courses" class="bg-red-600 px-6 py-3 rounded-xl shadow-lg hover:bg-red-700">Explore Courses</a>
-  </div>
-</section>
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <img src="images/student_1.jpg" width="200" />
+    <img src="images/food_1.jpg" width="200" />
+  </section>
 
-<!-- Colleges Section -->
-<section id="colleges" class="py-16 bg-gray-100">
-  <div class="max-w-7xl mx-auto px-4">
-    <h2 class="text-3xl font-bold text-center mb-10">Top Hotel Management Colleges in India</h2>
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold mb-2">Institute of Hotel Management, Bengaluru</h3>
-        <p>B.Sc. in Hospitality & Hotel Administration</p>
-        <a href="https://www.ihmbangalore.kar.nic.in/" target="_blank" class="text-blue-600 hover:underline">Official Website</a>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-xl font-bold mb-2">Institute of Hotel Management, Mumbai</h3>
-        <p>B.Sc. in Hospitality & Hotel Administration</p>
-        <a href="https://www.ihmmumbai.net/" target="_blank" class="text-blue-600 hover:underline">Official Website</a>
-      </div>
-    </div>
-  </div>
-</section>
+  <section id="syllabus">
+    <h2>Syllabus PDFs</h2>
+    <a href="pdfs/syllabus_sem1.pdf" target="_blank">Semester 1</a><br>
+    <a href="pdfs/syllabus_sem2.pdf" target="_blank">Semester 2</a>
+  </section>
 
-<!-- Courses Section -->
-<section id="courses" class="py-16">
-  <div class="max-w-7xl mx-auto px-4">
-    <h2 class="text-3xl font-bold text-center mb-10">Courses Offered</h2>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h4 class="text-xl font-bold mb-2">B.Sc. Hospitality & Hotel Administration</h4>
-        <p>Duration: 3 years</p>
-        <p>Eligibility: 12th pass, 50% marks</p>
-        <p>Fees: ₹50,000–2,00,000/yr</p>
-      </div>
-    </div>
-  </div>
-</section>
+  <section id="internship-abroad">
+    <h2>Internships Abroad</h2>
+    <p>Opportunities in Australia, Dubai, Switzerland, and USA.</p>
+  </section>
 
-<!-- Syllabus Section -->
-<section id="syllabus" class="py-16 bg-gray-100">
-  <div class="max-w-7xl mx-auto px-4">
-    <h2 class="text-3xl font-bold text-center mb-10">Syllabus</h2>
-    <iframe src="https://www.gnihm.ac.in/pdf/SYLLABUS%20-%20NCHMCT%20-%20B.Sc.H%26HA%20-%20SEM%20ALL.pdf" width="100%" height="500px"></iframe>
-  </div>
-</section>
+  <section id="career-abroad">
+    <h2>Career Opportunities Abroad</h2>
+    <p>Global hospitality career paths after hotel management.</p>
+  </section>
 
-<!-- Footer -->
-<footer class="bg-gray-900 text-white py-6 text-center">
-  <p>© 2025 NCHMCT Student Help | Designed for students</p>
-  <a href="https://t.me/+JPFyEztvXDE5OGVl" target="_blank" class="inline-flex items-center mt-2 bg-blue-500 px-4 py-2 rounded-full hover:bg-blue-600">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-5 h-5 mr-2">
-    Join our Telegram Group
-  </a>
-</footer>
-
+  <footer>
+    <a href="https://t.me/+JPFyEztvXDE5OGVl">
+      <img src="assets/telegram_icon.svg" alt="Telegram" width="40" />
+    </a>
+  </footer>
 </body>
 </html>
